src/test/deca/test_compilateur/codegen/valid/created/exp_un_minus.ass
	TSTO #4
	BOV pile_pleine
	ADDSP #4
; start main program
; Construction des tables des méthodes
; Construction de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; Main program
	LOAD #1, R2
	STORE R2, 3(GB)
	LOAD #2, R2
	FLOAT #2, R2
	STORE R2, 4(GB)
; Beginning of main instructions:
	WSTR "a="
	LOAD 3(GB), R2
	LOAD R2, R1
	WINT
	WNL
	WSTR "b="
	LOAD 4(GB), R2
	LOAD R2, R1
	WFLOAT
	WNL
	LOAD 3(GB), R2
	OPP 3(GB), R2
	STORE R2, 3(GB)
	LOAD 4(GB), R2
	OPP 4(GB), R2
	STORE R2, 4(GB)
	WSTR "a="
	LOAD 3(GB), R2
	LOAD R2, R1
	WINT
	WNL
	WSTR "b="
	LOAD 4(GB), R2
	LOAD R2, R1
	WFLOAT
	WNL
	LOAD #20, R2
	OPP #20, R2
	FLOAT R2, R2
	STORE R2, 4(GB)
	LOAD #6, R2
	OPP #6, R2
	STORE R2, 3(GB)
	WSTR "a="
	LOAD 3(GB), R2
	LOAD R2, R1
	WINT
	WNL
	WSTR "b="
	LOAD 4(GB), R2
	LOAD R2, R1
	WFLOAT
	WNL
	LOAD #0x1.99999ap1, R2
	OPP #0x1.99999ap1, R2
	STORE R2, 4(GB)
	WSTR "b="
	LOAD 4(GB), R2
	LOAD R2, R1
	WFLOAT
	WNL
	HALT
; Classe Object
; ---------- Code de la méthode equals dans la classe Object (built in)
code.Object.equals:
	LOAD -2(LB), R1
	CMP -3(LB), R1
	SEQ R0
	RTS
; Erreurs
pile_pleine:
	WSTR "Erreur : pile_pleine"
	WNL
	ERROR
; end main program
