src/test/deca/test_compilateur/codegen/invalid/created/dereferencement_null2.ass
	TSTO #5
	BOV pile_pleine
	ADDSP #5
; start main program
; Construction des tables des méthodes
; Construction de la table des méthodes de Object
	LOAD #null, R0
	STORE R0, 1(GB)
	LOAD code.Object.equals, R0
	STORE R0, 2(GB)
; Construction de la table des méthodes de B
	LEA 1(GB), R0
	STORE R0, 3(GB)
	LOAD code.Object.equals, R0
	STORE R0, 4(GB)
; Main program
	LOAD #null, R2
	STORE R2, 5(GB)
; Beginning of main instructions:
	LOAD 5(GB), R2
	CMP #null, R2
	BEQ dereferencement.null
	LOAD 1(R2), R2
	HALT
; Classe Object
; ---------- Code de la méthode equals dans la classe Object (built in)
code.Object.equals:
	LOAD -2(LB), R1
	CMP -3(LB), R1
	SEQ R0
	RTS
; Classe B
; ---------- Initialisation des champs de B
init.B:
	LOAD -2(LB), R1
	LOAD #0, R0
	STORE R0, 1(R1)
	RTS
; Erreurs
pile_pleine:
	WSTR "Erreur : pile_pleine"
	WNL
	ERROR
dereferencement.null:
	WSTR "Erreur : dereferencement.null"
	WNL
	ERROR
; end main program
